# course_217

./: CMakeLists.txt  main.cpp  resources.qrc
Files/: Main.qml
Files/components/: DailySessionItem.qml  LegendItem.qml  RoomCard.qml  RoomForm.qml  ScheduleCard.qml  SessionCard.qml  SessionForm.qml  StatCard.qml  TeacherCard.qml  TeacherForm.qml  VignetteMenu.qml
Files/layout/: MainPage.qml  TeacherMainPage.qml
Files/pages/: Login.qml  Register.qml  ReportsPage.qml  RoomsPage.qml  SchedulePage.qml  SessionsPage.qml  TeacherDashboard.qml  TeacherSchedule.qml
config/: Config.h
controllers/: GroupeController.h  MatiereController.h  RoomController.h  SessionController.h  TeacherController.h  authcontroller.cpp  authcontroller.h
models/: authcontroller.cpp  authcontroller.h  databasemanager.cpp  databasemanager.h
